# task_06_01

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
include/: task_06_01.hpp
modules/task_06_03/: main.cpp
modules/task_06_05/: Driver.cppm  Exhaust.cppm
src/: task_06_01.cpp
task_06_03/: Entity.cppm
task_06_04/: Group.cppm  Single.cppm  main.cpp
task_06_05/: Car.cppm  Engine.cppm  Wheel.cppm  main.cpp
